# heads-up

./: .editorconfig  README.md  build.sh  install.sh  meson.build
data/: com.example.appdata.xml.in  gresource.xml  launcher.desktop.in  meson.build  stateful.ui  theme_mixin.css  webview.css  window.ui
po/: LINGUAS  POTFILES  com.github.bleakgrey.headsup.pot  en_US.po  meson.build  nl.po  regenerate-po.sh  ru_RU.po
src/: Application.vala  Config.vala  Selection.vala  Source.vala  WebView.vala  WebViewSource.vala  Window.vala
src/Sources/: Wikitionary.vala  Wordnik.vala
src/Widgets/: Stateful.vala  WebView.vala
